tests/error/redefining_defined.c
// fail "Cannot use 'defined' as a macro name."

#define defined 9

